--- a/src/components/GeoHierarchy/d3/styles.css
+++ b/src/components/GeoHierarchy/d3/styles.css
@@ -30,7 +30,8 @@ svg {
 }
 
 .node text {
-    font: 14px sans-serif;
+    font-family: Roboto,sans-serif;
+    font-size: 12px;
 }
 
 .node:hover text {
