--- a/src/components/GeoHierarchy/styles.css
+++ b/src/components/GeoHierarchy/styles.css
@@ -1,18 +1,103 @@
 .container {
-    margin: 10px auto;
     border: 1px solid #ebebeb;
     position: relative;
-    border-radius: 5px;
-    -webkit-box-shadow: inset 0px 0px 107px -79px rgba(0,0,0,0.75);
-    -moz-box-shadow: inset 0px 0px 107px -79px rgba(0,0,0,0.75);
-    box-shadow: inset 0px 0px 107px -79px rgba(0,0,0,0.75);
+    -webkit-box-shadow: inset 0 0 107px -79px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: inset 0 0 107px -79px rgba(0, 0, 0, 0.75);
+    box-shadow: inset 0 0 107px -79px rgba(0, 0, 0, 0.75);
+    background-color: #fff;
+}
+
+.container--is-fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 10;
+}
+
+svg {
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.loaderContainer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
 }
 
 .toolbar {
     position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: 1;
+    z-index: 10;
     display: flex;
     flex-direction: column;
+}
+
+.toolbar--top-left {
+    position: absolute;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    top: 32px;
+    left: 32px;
+}
+
+.toolbar--top-right {
+    position: absolute;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    top: 32px;
+    right: 32px;
+}
+
+.toolbar--bottom {
+    position: absolute;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    bottom: 32px;
+    right: 32px;
+}
+
+.toolbarIcon {
+    margin-bottom: 10px;
+}
+
+.toolbarIcon:last-child {
+    margin-bottom: 0;
+}
+
+
+.node text {
+    font-family: Roboto,sans-serif;
+    font-size: 12px;
+}
+
+.node:hover text {
+    text-decoration: underline;
+    text-underline-position: under;
+}
+
+.node:hover circle {
+    stroke-opacity: 0.7;
+}
+
+.node:active circle {
+    stroke-opacity: 0.5;
 }
