--- a/src/components/Hierarchy/styles/styles.css
+++ b/src/components/Hierarchy/styles/styles.css
@@ -83,20 +83,20 @@ svg {
     margin-bottom: 0;
 }
 
-.node text {
+.item text {
     font-family: Roboto,sans-serif;
     font-size: 12px;
 }
 
-.node:hover text {
+.item:hover text {
     text-decoration: underline;
     text-underline-position: under;
 }
 
-.node:hover circle {
+.item:hover circle {
     stroke-opacity: 0.7;
 }
 
-.node:active circle {
+.item:active circle {
     stroke-opacity: 0.5;
 }
