--- a/src/components/Hierarchy/styles/styles.css
+++ b/src/components/Hierarchy/styles/styles.css
@@ -84,7 +84,7 @@ svg {
 }
 
 .item text {
-    font-family: Roboto,sans-serif;
+    font-family: Roboto, sans-serif;
     font-size: 12px;
 }
 
@@ -99,4 +99,11 @@ svg {
 
 .item:active circle {
     stroke-opacity: 0.5;
+}
+
+.searchBar {
+    background-color: #fff!important;
+    -webkit-box-shadow: 0px 0px 53px -24px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 53px -24px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 53px -24px rgba(0,0,0,0.75);
 }
