--- a/src/components/Hierarchy/styles/styles.css
+++ b/src/components/Hierarchy/styles/styles.css
@@ -102,8 +102,8 @@ svg {
 }
 
 .searchBar {
-    background-color: #fff!important;
-    -webkit-box-shadow: 0px 0px 53px -24px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 53px -24px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 53px -24px rgba(0,0,0,0.75);
+    background-color: #fff !important;
+    -webkit-box-shadow: 0px 0px 53px -24px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 53px -24px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 53px -24px rgba(0, 0, 0, 0.75);
 }
